--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "redux-thunk": "^2.2.0",
     "tachyons": "^4.9.0"
   },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2"
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
